--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.4",
     "@sveltejs/kit": "^2.7.3",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@types/node": "^22.5.0",
@@ -20,6 +19,7 @@
     "svelte-check": "^3.8.5",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@sveltejs/adapter-static": "^3.0.3"
   }
 }
