--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "preprocess": "node scripts/preprocess.js",
+    "postbuild": "npm run preprocess"
   },
   "devDependencies": {
     "@sveltejs/kit": "^2.7.3",
