--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preprocess": "node scripts/preprocess.js",
     "postbuild": "npm run preprocess"
   },
+  "dependencies": {
+    "@sveltejs/adapter-static": "^3.0.3"
+  },
   "devDependencies": {
     "@sveltejs/kit": "^2.7.3",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
@@ -21,7 +24,6 @@
     "svelte-check": "^3.8.5",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2",
-    "@sveltejs/adapter-static": "^3.0.3"
+    "vite": "^5.4.2"
   }
 }
